# face-anti-spoof

./: CHANGELOG.md  pyproject.toml  requirements.txt
docs/: DEPLOYMENT.md  TRAINING.md
face-antispoof-onnx/: CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  demo.py  requirements-dev.txt  setup.py
face-antispoof-onnx/docs/: LIMITATIONS.md
face-antispoof-onnx/models/: best_model_quantized.onnx
face-antispoof-onnx/scripts/: download_models.py  quantize_onnx.py
face-antispoof-onnx/src/core/: preprocessing.py  validators.py
face-antispoof-onnx/src/inference/: inference.py
face-antispoof-onnx/src/models/: minifas.py
face-antispoof-onnx/tests/: test_detection.py  test_inference.py
models/: best_model.onnx
scripts/: copy_models_from_ref.py  export_onnx.py
src/: __init__.py
src/core/: __init__.py  exceptions.py
src/detection/: __init__.py  detector.py
src/inference/: __init__.py
src/models/: __init__.py
tests/: conftest.py
